--- a/logger/CMakeLists.txt
+++ b/logger/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -m32 -std=c++11 -D__cdecl=\"\" -D__st
 add_library(logger STATIC AbstractLog.cpp FileLog.cpp Logger.cpp)
 
 install (TARGETS logger DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
+include_directories("../include")
