--- a/logger/CMakeLists.txt
+++ b/logger/CMakeLists.txt
@@ -8,3 +8,4 @@ add_library(logger STATIC AbstractLog.cpp FileLog.cpp Logger.cpp)
 install (TARGETS logger DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 
 include_directories("../include")
+include_directories("../../river")
