--- a/format.handler/CMakeLists.txt
+++ b/format.handler/CMakeLists.txt
@@ -1,7 +1,7 @@
 ## format handler CmakeLists.txt
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -m32")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -m32 -std=c++11 -D__cdecl=\"\" -D__stdcall=\"\"")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32 -std=c++11 -D__cdecl=\"\" -D__stdcall=\"\"")
 
 include_directories($ENV{RIVER_SDK_DIR}/include
 	)
